--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-rough": "^2.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.0",
     "roughjs": "^4.3.1",
     "semantic-ui-react": "^1.2.1",
     "spectre.css": "^0.5.9"
